--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/hostingnfg/simple-bank-be#readme",
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
@@ -28,6 +29,8 @@
     "@types/node": "^18.6.3",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
+    "prisma": "^4.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
