--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 PORT=8080
+
+MYSQL_ROOT_PASSWORD=12312fwlemwk
+MYSQL_DATABASE=db
+MYSQL_USER=testuser
+MYSQL_PASSWORD=kmertklm34jknre
+MYSQL_PORT=3306
+
+DATABASE_URL="mysql://root:12312fwlemwk@localhost:3306/db"
+
+JWT_SECRET=923u582fhdh8h23h
