--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "homepage": "https://github.com/hostingnfg/simple-bank-be#readme",
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.3",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
