--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prod": "npm run build && npm run start",
     "prod-calc": "npm run build && npm run calc",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "dev-calc": "concurrently \"npx tsc --watch\" \"nodemon -q dist/calculations.js\""
+    "dev-calc": "concurrently \"npx tsc --watch\" \"nodemon -q dist/calculations.js\"",
+    "lint": "eslint . --ext .ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seeds/seed.ts"
@@ -40,7 +41,10 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "concurrently": "^7.3.0",
+    "eslint": "^8.22.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
     "ts-node": "^10.9.1",
